<resources>
    <string name="app_name">Bookbank</string>
    <string name="hello">Hello</string>
    <string name="logout">LOGOUT</string>
    <string name="user_login">User Login</string>
    <string name="enter_email">Enter RollNo</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="not_a_user_sign_up">SIGN UP</string>
    <string name="user_sign_up">User Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="get_started">Get Started</string>
    <string name="Librarian">Librarian</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_book">Add Book</string>
    <string name="author_name">Author name</string>
    <string name="book_name">Book name</string>
    <string name="library_logo">LibraryLogo</string>
    <string name="search_books">Search Books</string>
    <string name="search">Search</string>
    <string name="librarian">librarian</string>
    <string name="request">Request</string>
    <string name="book">Book</string>
    <string name="book_icon">book</string>
    <string name="bookname">harish</string>
    <string name="author">hari</string>
</resources>
