<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LibrarianEntry">

    <TextView
        android:id="@+id/add_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:fontFamily="@font/google"
        android:gravity="center"
        android:text="@string/add_book"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google"
            android:hint="@string/book_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google"
            android:hint="@string/author_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAddBook"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/google"
        android:text="@string/add_book"
        android:textStyle="bold" />
</LinearLayout>