<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    tools:context="com.r2017.bookbank.MainActivity">

    <TextView
        android:id="@+id/tvTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#000"
        android:fontFamily="@font/google"
        android:text="@string/login"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_rollno">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRollNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/google"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnSignUp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/google"
        android:text="@string/not_a_user_sign_up" />

</LinearLayout>
